2004-10-07  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/17115
	* tree-inline.c (expand_call_inline): Do not warn for functions
	marked with attribute noinline.

2004-10-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (*-*-solaris2*): Fix marker for URL.

2004-10-07  Richard Sandiford  <rsandifo@redhat.com>

	PR target/17770
	* config/mips/mips.md (mov_lwl): Remove hazard=none attribute.

2004-10-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/17027
	Backport from mainline:
	* cfglayout.c (fixup_fallthru_exit_predecessor): If the first block
	falls through to exit, split it.
	* cfgrtl.c (rtl_split_block): If no insn is specified, split on the
	first insn in the basic block.

2004-10-06  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/invoke.text (freorder-functions): Add a leading `.' to
	"text.hot" and "text.unlikely" sections.

2004-10-06  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/16007
	* doc/install.texi (*-*-solaris2*): Mention potential problem
	with Sun assembler + GNU linker and C++ programs.
	Document status of binutils 2.15 release.

2004-10-06  Alan Modra  <amodra@bigpond.net.au>

	PR 16406
	* doc/tm.texi (LIBGCC_SPEC): Mention modifications.
	(USE_LD_AS_NEEDED, LINK_EH_SPEC): Document.

2004-10-03  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/linux.h (TARGET_C99_FUNCTIONS): Define.
	(OS_MISSING_POWERPC64): Move, and comment.
	* config/rs6000/linux64.h (TARGET_C99_FUNCTIONS): Define.
	(OS_MISSING_POWERPC64): Move, and comment.

2004-10-01  Nick Clifton  <nickc@redhat.com>

	* config/stormy16/stormy16.c (TARGET_BUILD_BUILTIN_VA_LIST_TYPE):
	Fix typo in macro name, it should be: TARGET_BUILD_BUILTIN_VA_LIST.

2004-09-30  Richard Henderson  <rth@redhat.com>

	* config/alpha/qrnnd.asm: Mark for noexecstack.

2004-09-30  Richard Henderson  <rth@redhat.com>
 
        * unwind-dw2.c (_Unwind_GetGR): Honor DWARF_ZERO_REG.
        * doc/tm.texi (DWARF_ZERO_REG): New.
 