@@ -1,3 +1,7 @@
+2004-10-08  Christian Ehrhardt  <ehrhardt@mathematik.uni-ulm.de>
+
+	* gcc.dg/ultrasp11.c: New test.
+
 2004-10-07  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/17115
